Fixed NavBar Alignments on all pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,6 +83,7 @@ h6 {
   z-index: 997;
   transition: all 0.5s;
   background: rgba(42, 44, 57, 0.9);
+  justify-content: centered;
 }
 
 #header.header-transparent {
